style:scss bug fixed and scrollbar style improved

--- a/src/assets/scss/profile/_dashboard.scss
+++ b/src/assets/scss/profile/_dashboard.scss
@@ -131,7 +131,7 @@ $text-sm: 0.875em;
     }
 
     .ps__thumb-y {
-      width: 6px;
+      width: 5px;
       background-color: $gray-300;
       border-radius: $radius-full;
       right: 0;
